[project]
name = "visuales-uclv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "bs4>=0.0.2",
    "megatools>=0.0.4",
    "patool>=4.0.4",
    "libtorrent==2.0.11",
    "py7zr>=1.1.0",
    "kurigram>=2.0.22",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.7",
    "requests>=2.33.1",
    "tgcrypto>=1.2.5",
    "tqdm>=4.67.3",
    "yt-dlp>=2026.3.17",
    "streamlit>=1.56.0",
    "psutil>=7.2.2",
    "pymongo>=4.17.0",
    "scikit-learn>=1.8.0",
    "aiohttp>=3.13.5",
]
